// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ArticleCard /> by default matches with snapshot 1`] = `
<div
  className="k-Card k-Card--light k-Card--withoutBoxShadowOnHover crowdfunding-card__StyledContainer-sc-1b0f5ki-0 hRIUAW"
  href={null}
  onClick={[Function]}
>
  <div
    className="k-Card__imageContainer image__StyledImageContainer-sc-166p1i9-0 hRLHCJ"
  >
    <img
      alt=""
      backgroundColor="#d8d8d8"
      className="k-Card__image"
      src="https://placehold.it/350x200/caf4fe/caf4fe"
    />
  </div>
  <div
    className="image__StyledContainerAvatar-sc-166p1i9-1 eRJQDD"
  >
    <div
      className="k-u-margin-bottom-single k-u-margin-top-single"
    >
      <span
        className="k-ButtonImage k-ButtonImage--withoutPointerEvents image__StyledAvatar-sc-166p1i9-2 cfJjjq"
        tabIndex={null}
      >
        <img
          alt=""
          className="k-ButtonImage__img"
          src="https://placehold.it/100x100/caf4fe/caf4fe"
        />
      </span>
    </div>
    <div
      className="image__StyledOwner-sc-166p1i9-3 ksyaAt"
    >
      <div
        className="k-u-size-micro k-u-weight-regular image__StyledTitle-sc-166p1i9-4 ipABxN"
      >
        
      </div>
      <div
        className="k-u-size-micro k-u-weight-light image__StyledDescription-sc-166p1i9-5 dxlaNj"
      >
        
      </div>
    </div>
  </div>
  <div
    className="description__StyledContainer-sc-1kqqtcu-1 gskEBS"
  >
    <div
      className="description__StyledTitle-sc-1kqqtcu-2 hJodRF"
    >
      <p
        className="k-Title k-Card__title k-Title--senary k-Title--withoutMargin"
      >
        
      </p>
    </div>
    <div
      className="description__StyledContainerSubtitle-sc-1kqqtcu-5 tWhBV"
    >
      <span
        className="description__StyledHorizontalStroke-sc-1kqqtcu-6 cWydpT horizontal-stroke__StyledHorizontalStroke-sc-15k7x5m-0 gBRCkl"
      />
      
    </div>
  </div>
</div>
`;

exports[`<ArticleCard /> with articleTitle and articleSubTitle props matches with snapshot 1`] = `
<div
  className="k-Card k-Card--light k-Card--withoutBoxShadowOnHover crowdfunding-card__StyledContainer-sc-1b0f5ki-0 hRIUAW"
  href={null}
  onClick={[Function]}
>
  <div
    className="k-Card__imageContainer image__StyledImageContainer-sc-166p1i9-0 hRLHCJ"
  >
    <img
      alt=""
      backgroundColor="#d8d8d8"
      className="k-Card__image"
      src="https://placehold.it/350x200/caf4fe/caf4fe"
    />
  </div>
  <div
    className="image__StyledContainerAvatar-sc-166p1i9-1 eRJQDD"
  >
    <div
      className="k-u-margin-bottom-single k-u-margin-top-single"
    >
      <span
        className="k-ButtonImage k-ButtonImage--withoutPointerEvents image__StyledAvatar-sc-166p1i9-2 cfJjjq"
        tabIndex={null}
      >
        <img
          alt=""
          className="k-ButtonImage__img"
          src="https://placehold.it/100x100/caf4fe/caf4fe"
        />
      </span>
    </div>
    <div
      className="image__StyledOwner-sc-166p1i9-3 ksyaAt"
    >
      <div
        className="k-u-size-micro k-u-weight-regular image__StyledTitle-sc-166p1i9-4 ipABxN"
      >
        
      </div>
      <div
        className="k-u-size-micro k-u-weight-light image__StyledDescription-sc-166p1i9-5 dxlaNj"
      >
        
      </div>
    </div>
  </div>
  <div
    className="description__StyledContainer-sc-1kqqtcu-1 gskEBS"
  >
    <div
      className="description__StyledTitle-sc-1kqqtcu-2 hJodRF"
    >
      <p
        className="k-Title k-Card__title k-Title--senary k-Title--withoutMargin"
      >
        Custom title
      </p>
    </div>
    <div
      className="description__StyledContainerSubtitle-sc-1kqqtcu-5 tWhBV"
    >
      <span
        className="description__StyledHorizontalStroke-sc-1kqqtcu-6 cWydpT horizontal-stroke__StyledHorizontalStroke-sc-15k7x5m-0 gBRCkl"
      />
      <p
        className="k-u-size-micro k-u-weight-regular description__StyledSubtitle-sc-1kqqtcu-7 tkkwM"
      >
        <span
          className="description__StyledTruncate-sc-1kqqtcu-0 kxbktE"
          width={0}
        >
          <span />
          <span>
            Custom subtitle
          </span>
          <span
            style={
              Object {
                "left": 0,
                "position": "fixed",
                "top": 0,
                "visibility": "hidden",
              }
            }
          >
            …
          </span>
        </span>
      </p>
    </div>
  </div>
</div>
`;

exports[`<ArticleCard /> with ignored props matches with snapshot 1`] = `
<div
  className="k-Card k-Card--light k-Card--withoutBoxShadowOnHover crowdfunding-card__StyledContainer-sc-1b0f5ki-0 hRIUAW"
  href={null}
  onClick={[Function]}
>
  <div
    className="k-Card__imageContainer image__StyledImageContainer-sc-166p1i9-0 hRLHCJ"
  >
    <img
      alt=""
      backgroundColor="#d8d8d8"
      className="k-Card__image"
      src="https://placehold.it/350x200/caf4fe/caf4fe"
    />
  </div>
  <div
    className="image__StyledContainerAvatar-sc-166p1i9-1 eRJQDD"
  >
    <div
      className="k-u-margin-bottom-single k-u-margin-top-single"
    >
      <span
        className="k-ButtonImage k-ButtonImage--withoutPointerEvents image__StyledAvatar-sc-166p1i9-2 cfJjjq"
        tabIndex={null}
      >
        <img
          alt=""
          className="k-ButtonImage__img"
          src="https://placehold.it/100x100/caf4fe/caf4fe"
        />
      </span>
    </div>
    <div
      className="image__StyledOwner-sc-166p1i9-3 ksyaAt"
    >
      <div
        className="k-u-size-micro k-u-weight-regular image__StyledTitle-sc-166p1i9-4 ipABxN"
      >
        
      </div>
      <div
        className="k-u-size-micro k-u-weight-light image__StyledDescription-sc-166p1i9-5 dxlaNj"
      >
        
      </div>
    </div>
  </div>
  <div
    className="description__StyledContainer-sc-1kqqtcu-1 gskEBS"
  >
    <div
      className="description__StyledTitle-sc-1kqqtcu-2 hJodRF"
    >
      <p
        className="k-Title k-Card__title k-Title--senary k-Title--withoutMargin"
      >
        
      </p>
    </div>
    <div
      className="description__StyledContainerSubtitle-sc-1kqqtcu-5 tWhBV"
    >
      <span
        className="description__StyledHorizontalStroke-sc-1kqqtcu-6 cWydpT horizontal-stroke__StyledHorizontalStroke-sc-15k7x5m-0 gBRCkl"
      />
      
    </div>
  </div>
</div>
`;

exports[`<ArticleCard /> with some props matches with snapshot 1`] = `
<a
  className="k-Card k-Card--light k-Card--withoutBoxShadowOnHover crowdfunding-card__StyledContainer-sc-1b0f5ki-0 hRIUAW"
  href="#foobar"
  onClick={[Function]}
>
  <div
    className="k-Card__imageContainer image__StyledImageContainer-sc-166p1i9-0 hRLHCJ"
  >
    <img
      alt="Image alt"
      backgroundColor="#d8d8d8"
      className="k-Card__image"
      color="#333"
      src="#image"
    />
  </div>
  <div
    className="image__StyledContainerAvatar-sc-166p1i9-1 eRJQDD"
  >
    <div
      className="k-u-margin-bottom-single k-u-margin-top-single"
    >
      <span
        className="k-ButtonImage k-ButtonImage--withoutPointerEvents image__StyledAvatar-sc-166p1i9-2 cfJjjq"
        tabIndex={null}
      >
        <img
          alt="Avatar alt"
          className="k-ButtonImage__img"
          src="#avatar"
        />
      </span>
    </div>
    <div
      className="image__StyledOwner-sc-166p1i9-3 ksyaAt"
    >
      <div
        className="k-u-size-micro k-u-weight-regular image__StyledTitle-sc-166p1i9-4 ipABxN"
      >
        Custom title
      </div>
      <div
        className="k-u-size-micro k-u-weight-light image__StyledDescription-sc-166p1i9-5 dxlaNj"
      >
        Custom description
      </div>
    </div>
  </div>
  <div
    className="description__StyledContainer-sc-1kqqtcu-1 gskEBS"
  >
    <div
      className="description__StyledTitle-sc-1kqqtcu-2 hJodRF"
    >
      <h4
        className="k-Title k-Card__title k-Title--senary k-Title--withoutMargin"
      >
        Custom title
      </h4>
    </div>
    <div
      className="description__StyledContainerSubtitle-sc-1kqqtcu-5 tWhBV"
    >
      <span
        className="description__StyledHorizontalStroke-sc-1kqqtcu-6 cWydpT horizontal-stroke__StyledHorizontalStroke-sc-15k7x5m-0 gBRCkl"
      />
      <p
        className="k-u-size-micro k-u-weight-regular description__StyledSubtitle-sc-1kqqtcu-7 tkkwM"
      >
        <span
          className="description__StyledTruncate-sc-1kqqtcu-0 kxbktE"
          width={0}
        >
          <span />
          <span>
            Custom subtitle
          </span>
          <span
            style={
              Object {
                "left": 0,
                "position": "fixed",
                "top": 0,
                "visibility": "hidden",
              }
            }
          >
            …
          </span>
        </span>
      </p>
    </div>
  </div>
</a>
`;
